<resources>
    <string name="app_name">MovieFinder</string>
    <string name="upcoming_movies_section_title">Upcoming Movies</string>
    <string name="upcoming_movies_icon_content_description">Upcoming Movies Icon</string>
    <string name="movie_card_title">Movie Card Title</string>
    <string name="movie_card_image_content_description">Movie Card Image</string>
    <string name="movie_details_image_content_description">Movie Details Image Content Description</string>
    <string name="movie_details_title">Movie Details Title</string>
    <string name="favourite_icon_content_description">Favourite Icon Content Description</string>
    <string name="share_icon_content_description">Share Icon Content Description</string>
    <string name="movie_details_overview_text">Overview</string>
    <string name="movie_details_info_label_overview">Popularity:</string>
    <string name="movie_details_release_date">2017</string>
    <string name="search_movies_title">Search Movies</string>
    <string name="search_movies_hint">Search Movies</string>
    <string name="movie_search_overview_text">%1$s…</string>
</resources>
